--- a/Website/WebsiteFrontend/src/index.html
+++ b/Website/WebsiteFrontend/src/index.html
@@ -15,7 +15,7 @@
 <body>
   <app-root></app-root>
 
-  <div class="container" class="backgroundashboardd-alt">
+  <div class="container" style="padding: 50px 0">
     <div class="row">
         <div class="col-sm-6 copyright">
             <p>
