Website: Navigation reworked

--- a/Website/WebsiteFrontend/src/index.html
+++ b/Website/WebsiteFrontend/src/index.html
@@ -15,8 +15,8 @@
 <body>
   <app-root></app-root>
 
-  <div class="container" style="padding: 50px 0">
-    <div class="row">
+  <div style="padding: 50px 0; background: #1a1c1f">
+    <div class="row-footer">
         <div class="col-sm-6 copyright">
             <p>
                 &copy; 2019 Rickie Karp
