--- a/web/launchpad/static/chat.html
+++ b/web/launchpad/static/chat.html
@@ -12,7 +12,7 @@
         var input = document.getElementById("input");
         var output = document.getElementById("output");
 
-         var ws = new WebSocket("ws://localhost:12000/ws");
+         var ws = new WebSocket("ws://rickiekarp.net:12000/ws");
          //Triggered when the connection is opened
          ws.onopen = function(evt) {
              console.log("Connection open...");
