--- a/web/nucleus/static/home.html
+++ b/web/nucleus/static/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Chat Example</title>
+<title>Nucleus Management</title>
 <script type="text/javascript">
 window.onload = function () {
     var conn;
